[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=58", "wheel"]

[project]
authors = [
  {name = "Vincent Deo", email = "vdeo@naoj.org"}
]
dependencies = [
]

description = "AO188 upgraded RTS codebase"
name = "aorts"
readme = "README.md"
version = "1.0"

[tool.setuptools]
packages = ["aorts", "rtm4obcp"]
script-files = [
  './scripts/rts_start.sh'
]

[project.scripts]
g2if-pyserver = "aorts.server.server_main:main_g2if"


[tool.pyright]
extraPaths = ["/home/aorts/src/swmain", "/home/vdeo/src/swmain"] # Need to list scexao's pip install -e packages...
typeCheckingMode = "basic" # off | basic | standard | strict # Look there https://github.com/microsoft/pyright/blob/main/docs/configuration.md
include = ["aorts", "rtm4obcp"]
exclude = ["build/",
           "**/__pycache",
           "**/.mypy_cache",
           "rtm4obcp/old_rtm-V1.3"
           ]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"
