[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=58", "wheel"]

[project]
authors = [
  {name = "Vincent Deo", email = "vdeo@naoj.org"}
]
dependencies = [
]

description = "AO RTS23 codebase"
name = "aorts"
readme = "README.md"
version = "1.0"

[tool.setuptools]
packages = ["aorts", "rtm4obcp"]
script-files = [
  './scripts/rts_start.sh', # The startup
  './scripts/rts23' # net client
]

[project.scripts]
g2if-pyserver = "aorts.server.server_main:main_g2if"
ao-testobj = "aorts.control.test_obj:TestControl.main"
rts-modeselect = "aorts.modules.rts_modeselect_main:modeselect"


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--ignore=mains",
]

[tool.coverage.run]
command_line = "-m pytest"
branch = true
source = ["./aorts"]

[tool.pyright]
# Need to list scexao's pip install -e packages...
extraPaths = ["/home/aorts/src/swmain", "/home/vdeo/src/swmain",
              "/home/aorts/src/hardwaresecrets", "/home/vdeo/src/hardwaresecrets",
              "/home/aorts/src/camstack", "/home/vdeo/src/camstack", "/home/vdeo/src/pyMilk"]
typeCheckingMode = "basic" # off | basic | standard | strict # Look there https://github.com/microsoft/pyright/blob/main/docs/configuration.md
include = ["aorts", "rtm4obcp"]
exclude = ["build/",
           "**/__pycache",
           "**/.mypy_cache",
           "rtm4obcp/old_rtm-V1.3",
           "aorts/datafetch" # One day if we re-up the legacy interface requirements...
           ]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"
